refact: using req.userInfo on routes to get user
