# back/routes/routesPaths/authRoutes.js
@@ -4,6 +4,6 @@ import express from 'express'
 const router = express.Router();
 
 router.post('/login', AuthController.login)
-router.get('/logout',AuthController.logout)
+router.get('/logout', AuthController.logout)
 
 export default router
